# ace

./: .gitignore  README.md  pyproject.toml
ace/: __init__.py  cli.py  presets.py
ace/agents/: __init__.py  divergence.py  synthesis.py
ace/coupling/: __init__.py  function.py
docs/: debate-frames-vs-providers.md  debate-model-strength.md
skills/: ace.md
tests/: test_coupling_tuning.py
